# RAG_EXE

./: .env  .gitattributes  README.md  chat.nextgen  chatbot.spec  exe_maker.md  main.py  pyproject.toml  test.py
backend/: api.py  config.py  database.py  ingest.py  logger.py  models.py  rag_engine.py
static/: index.html  manage.html  profile.html
static/css/: style.css
static/js/: app.js
